[TG] About section was updated

--- a/thomas-corner/content/pages/about.html
+++ b/thomas-corner/content/pages/about.html
@@ -34,20 +34,19 @@
         <div id="scoring">
             <p class="up_info">
                 Система очков проекта построена таким образом, чтобы игроки могли получать дополнительные балы за
-                хорошую игру или напротив, получать штрафные балы за плохую. За основу была взята система ФИИМ с некоторыми
-                изменениями:
+                хорошую игру или напротив, получать штрафные балы за плохую. За основу была взята система КСЛ.
+                За каждую игру игрок получает некий бал, который является суммой трех показателей.
+                Конечный балл игрока за серию является суммой всех баллов набранных игроком за все игры.
                 <ul>
-                    <li>За лучший ход игрок может получить -0.2, 0, 0.2 или 0.4 бала за 0, 1, 2 и 3 мафов соответственно;</li>
-                    <li>Игрок, вскрывшийся шерифом и озвучив неправильные проверки (черного дал красным и наоборот) и не откативший
-                        до решающего момента получает -0.3 бала штраф независимо от победившей стороны.
-                    </li>
-                    <li>Обычный игрок, вскрывшийся шерифом и не откативший до решающего момента получает -0.3 бала штраф независимо
-                        от победившей стороны.</li>
-                    <li>У каждого игрока имеется 0.06 дополнительных балов. Эти балы игрок в праве поделить между игроками, которые
-                        по его мнение сыграли лучше остальных в этой игре (либо не отдавать никому). У ведущего имеется 0.1 бала
-                        (таким образом максимальный возможный доп. бал — 0.7). Балы могут делиться в любой пропорции до сотых
-                        (нельзя отдать 0.025). Бал в размере 0.01 ставить запрещено. Игроку из проигравшей команды разрешено
-                        ставить не более 0.03;
+                    <li>Очки за результат: Победа +3 балла, Лучший ход: 2 черных +1 балл, 3 черных +2 балла.</li>
+                    <li>Оценка от ведущих: Каждый игрок получает от +0.5 до +5 баллов с шагом 0.5
+                        (+0.5 - ужасно сыгранная игра (Что ты творишь?!!!!) +5 - блестяще сыгранная игра (Я хочу от тебя детей!)).
+                        0 баллов - в случае, если игрок был удален с игры (или самолично удалился) до окончания игры.</li>
+                    <li>Лучшие от игроков: После окончания игры каждый игрок имеет право высказаться о игре и сказать, кто для него является лучшим в этой игре. 
+                        Каждый голос оценивается в +0,3 баллов. Голосовать за себя нельзя. Не голосовать нельзя.
+                        "Сливать" лучшего нельзя. Нельзя.. Нельзя.. Нельзя.. Можно отдать голос на усмотрение ведущего.</li>
+                    <li>Во время обуждения у игрока есть три фола, которые он может использовать для комментария не в свою минуту.
+                        При получении 4 фолла все доп. баллы (игрока с 4 фоллами) от игроков аннулируются, игрок покидает зал до начала следующей игры.
                     </li>
                 </ul>
             </p>
