[TG] about cr was updated

--- a/thomas-corner/content/pages/about.html
+++ b/thomas-corner/content/pages/about.html
@@ -41,12 +41,12 @@
                     <li>Очки за результат: Победа +3 балла, Лучший ход: 2 черных +1 балл, 3 черных +2 балла.</li>
                     <li>Оценка от ведущих: Каждый игрок получает от +0.5 до +5 баллов с шагом 0.5
                         (+0.5 - ужасно сыгранная игра (Что ты творишь?!!!!) +5 - блестяще сыгранная игра (Я хочу от тебя детей!)).
-                        0 баллов - в случае, если игрок был удален с игры (или самолично удалился) до окончания игры.</li>
+                    </li>
                     <li>Лучшие от игроков: После окончания игры каждый игрок имеет право высказаться о игре и сказать, кто для него является лучшим в этой игре. 
                         Каждый голос оценивается в +0,3 баллов. Голосовать за себя нельзя. Не голосовать нельзя.
                         "Сливать" лучшего нельзя. Нельзя.. Нельзя.. Нельзя.. Можно отдать голос на усмотрение ведущего.</li>
                     <li>Во время обуждения у игрока есть три фола, которые он может использовать для комментария не в свою минуту.
-                        При получении 4 фолла все доп. баллы (игрока с 4 фоллами) от игроков аннулируются, игрок покидает зал до начала следующей игры.
+                        При получении 4 фолла все доп. баллы (игрока с 4 фоллами) от игроков аннулируются, игрок получает -1 балл и покидает зал до начала следующей игры.
                     </li>
                 </ul>
             </p>
