[TG] All rating removed (beta), ordering was added (new fields)

--- a/thomas-corner/content/pages/rating.html
+++ b/thomas-corner/content/pages/rating.html
@@ -20,8 +20,7 @@
     <div id="ratingOrdering" class="rating_ordering">
         <ul>
             <li><p>&#183;</p></li>
-            <li><a id="season"  href="#third_season">Season II</a></li>
-            <li><a id="alltime" href="#all_time">All time</a></li>
+            <li><a id="season" href="#third_season">Season III</a></li>
             <li><p>&#183;</p></li>
         </ul>
     </div>
