--- a/thomas-corner/content/pages/stream.html
+++ b/thomas-corner/content/pages/stream.html
@@ -16,8 +16,7 @@
     </div>
     <div class="striming_wrapper">
         <h2>Watch & Learn</h2>
-        <iframe src="//vk.com/video_ext.php?oid=-178698831&id=456239043&hash=7c76a0153299bc20&hd=2" width="850" height="480" frameborder="0" allowfullscreen></iframe>
-        <p style="" class="stream_description">Season 3, Ev. 1</p>
+        <iframe src="//vk.com/video_ext.php?oid=-178698831&id=456239044&hash=a139b6ee513173e7" width="850" height="480" frameborder="0" allowfullscreen></iframe>
+        <p class="stream_description">Season 3, Ev. 1</p>
     </div>
-</div>
 </body>
