--- a/thomas-corner/content/pages/about.html
+++ b/thomas-corner/content/pages/about.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <div class="header">
+        <img src="../../images/thomas-logo-v2.jpg"/>
     </div>
     <div class="sub_header">
         <ul>
