--- a/thomas-corner/content/pages/home.html
+++ b/thomas-corner/content/pages/home.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div class="header">
+        <img src="../../images/thomas-logo-v2.jpg"/>
     </div>
     <div class="sub_header">
         <ul>
