[TG] new theme was aookied, stream was updated

--- a/thomas-corner/content/pages/stream.html
+++ b/thomas-corner/content/pages/stream.html
@@ -17,7 +17,7 @@
     </div>
     <div class="striming_wrapper">
         <h2>Watch & Learn</h2>
-        <iframe src="//vk.com/video_ext.php?oid=-178698831&id=456239044&hash=a139b6ee513173e7" width="850" height="480" frameborder="0" allowfullscreen></iframe>
-        <p class="stream_description">Season 3, Ev. 1</p>
+        <iframe width="850" height="480" src="https://www.youtube.com/embed/N5eT46_uScs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p class="stream_description">Season 3, Ev. 3</p>
     </div>
 </body>
