--- a/thomas-corner/content/pages/stream.html
+++ b/thomas-corner/content/pages/stream.html
@@ -17,7 +17,7 @@
     </div>
     <div class="striming_wrapper">
         <h2>Watch & Learn</h2>
-        <iframe width="850" height="480" src="https://www.youtube.com/embed/N5eT46_uScs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p class="stream_description">Season 3, Ev. 3</p>
+        <iframe width="850" height="480" src="//vk.com/video_ext.php?oid=-178698831&id=456239046&hash=77d3945eb7fb3c68" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p class="stream_description">Season 3, Ev. 5</p>
     </div>
 </body>
