[TG] arhive was implemented

--- a/thomas-corner/content/pages/rating.html
+++ b/thomas-corner/content/pages/rating.html
@@ -15,6 +15,7 @@
             <li><a href="home.html">Home</a></li>
             <li><a href="rating.html">Rating</a></li>
             <li><a href="stream.html">Stream<img src="http://icons.iconarchive.com/icons/pixelresort/peely/256/video-icon.png"></a></li>
+            <li><a href="archive.html">Archive</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
     </div>
