--- a/thomas-corner/content/pages/archive.html
+++ b/thomas-corner/content/pages/archive.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="../../styles/main.css">
     <link rel="stylesheet" href="../../styles/evenings.css">
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="../../files/evenings.js"></script>
     <script type="text/javascript" src="../../scripts/evenings.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
