--- a/x-maf_league/content/pages/rating.html
+++ b/x-maf_league/content/pages/rating.html
@@ -23,15 +23,18 @@
                     <td><img src="../../images/users/arhi.jpg"/></td>
                     <td>Архи</td>
                     <td>
-                        <div>33,7</div>
+                        <div>38,7</div>
+                        <div>
+                            <span><img src="../../images/green_up.png">5</span>
+                        </div>
                     </td>
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td><img src="../../images/users/voron.jpg"/></td>
-                    <td>Ворон</td>
+                    <td><img src="../../images/users/kris.jpg"/></td>
+                    <td>Крис</td>
                     <td>
-                        <div>30</div>
+                        <div>30,1</div>
                         <div>
                             <span><img src="../../images/green_up.png">3</span>
                         </div>
@@ -39,76 +42,84 @@
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td><img src="../../images/users/kris.jpg"/></td>
-                    <td>Крис</td>
+                    <td><img src="../../images/users/voron.jpg"/></td>
+                    <td>Ворон</td>
                     <td>
-                        <div>27,1</div>
-                        <div>
-                            <span><img src="../../images/green_up.png">7</span>
-                        </div>
+                        <div>30</div>
                     </td>
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td><img src="../../images/users/flash.jpg"/></td>
-                    <td>Флэш</td>
-                    <td>26,3<span><img src="../../images/green_up.png">3</span></td>
+                    <td><img src="../../images/users/vb.jpg"/></td>
+                    <td>Валерун-Балерун</td>
+                    <td>
+                        <div>27,7</div>
+                        <div>
+                            <span><img src="../../images/green_up.png">11</span>
+                        </div>
+                    </td>
                 </tr>
                 <tr>
                     <td>5</td>
-                    <td><img src="../../images/users/kinder.jpg"/></td>
-                    <td>Киндер</td>
+                    <td><img src="../../images/users/iskra.jpg"/></td>
+                    <td>Искра</td>
                     <td>
-                        <div>22,2</div>
+                        <div>27</div>
                         <div>
-                            <span><img src="../../images/green_up.png">3</span>
+                            <span><img src="../../images/green_up.png">14</span>
                         </div>
                     </td>
                 </tr>
                 <tr>
                     <td>6</td>
-                    <td><img src="../../images/users/zodiak.jpg"/></td>
-                    <td>Зодиак</td>
+                    <td><img src="../../images/users/flash.jpg"/></td>
+                    <td>Флэш</td>
                     <td>
-                        <div>22</div>
+                        <div>26,3</div>
                     </td>
                 </tr>
                 <tr>
                     <td>7</td>
-                    <td><img src="../../images/users/plesen.jpg"/></td>
-                    <td>Плесень</td>
+                    <td><img src="../../images/users/kinder.jpg"/></td>
+                    <td>Киндер</td>
                     <td>
-                        <div>21</div>
+                        <div>26,2</div>
+                        <div>
+                            <span><img src="../../images/green_up.png">4</span>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td><img src="../../images/users/zodiak.jpg"/></td>
+                    <td>Зодиак</td>
+                    <td>
+                        <div>25</div>
                         <div>
                             <span><img src="../../images/green_up.png">3</span>
                         </div>
                     </td>
                 </tr>
                 <tr>
-                    <td>8</td>
+                    <td>9</td>
                     <td><img src="../../images/users/yesterday.jpg"/></td>
                     <td>Yesterday</td>
                     <td>
-                        <div>20</div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>9</td>
-                    <td><img src="../../images/users/chuha.jpg"/></td>
-                    <td>Чуха</td>
-                    <td>
-                        <div>18</div>
+                        <div>23</div>
                         <div>
-                            <span><img src="../../images/green_up.png">18</span>
+                            <span><img src="../../images/green_up.png">3</span>
                         </div>
                     </td>
                 </tr>
                 <tr>
                     <td>10</td>
-                    <td><img src="../../images/users/reinoven.jpg"/></td>
-                    <td>Рейновен</td>
+                    <td><img src="../../images/users/moriarty.jpg"/></td>
+                    <td>Мориарти</td>
                     <td>
-                        <div>17,6</div>
+                        <div>23</div>
+                        <div>
+                            <span><img src="../../images/green_up.png">8</span>
+                        </div>
                     </td>
                 </tr>
                 <tr>
@@ -116,44 +127,68 @@
                     <td><img src="../../images/users/artik.jpg"/></td>
                     <td>Артик</td>
                     <td>
-                        <div>16,9</div>
+                        <div>22,9</div>
                         <div>
-                            <span><img src="../../images/green_up.png">5</span>
+                            <span><img src="../../images/green_up.png">6</span>
                         </div>
                     </td>
                 </tr>
                 <tr>
                     <td>12</td>
-                    <td><img src="../../images/users/vb.jpg"/></td>
-                    <td>Валерун-Балерун</td>
+                    <td><img src="../../images/users/plesen.jpg"/></td>
+                    <td>Плесень</td>
                     <td>
-                        <div>16,7</div>
+                        <div>21</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>13</td>
+                    <td><img src="../../images/users/chuha.jpg"/></td>
+                    <td>Чуха</td>
+                    <td>
+                        <div>18</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>14</td>
+                    <td><img src="../../images/users/reinoven.jpg"/></td>
+                    <td>Рейновен</td>
+                    <td>
+                        <div>17,6</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>15</td>
+                    <td><img src="../../images/users/ged.jpg"/></td>
+                    <td>Гед</td>
+                    <td>
+                        <div>15</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>16</td>
+                    <td><img src="../../images/users/alisa.jpg"/></td>
+                    <td>Алиса (Лера)</td>
+                    <td>
+                        <div>15</div>
                         <div>
                             <span><img src="../../images/green_up.png">3</span>
                         </div>
                     </td>
                 </tr>
                 <tr>
-                    <td>13</td>
-                    <td><img src="../../images/users/moriarty.jpg"/></td>
-                    <td>Мориарти</td>
-                    <td>
-                        <div>15</div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>14</td>
-                    <td><img src="../../images/users/ged.jpg"/></td>
-                    <td>Гед</td>
+                    <td>17</td>
+                    <td><img src="../../images/users/avrora.jpg"/></td>
+                    <td>Аврора</td>
                     <td>
                         <div>15</div>
                         <div>
-                            <span><img src="../../images/green_up.png">15</span>
+                            <span><img src="../../images/green_up.png">6</span>
                         </div>
                     </td>
                 </tr>
                 <tr>
-                    <td>15</td>
+                    <td>18</td>
                     <td><img src="../../images/users/krista.jpg"/></td>
                     <td>Криста</td>
                     <td>
@@ -161,7 +196,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>16</td>
+                    <td>19</td>
                     <td><img src="../../images/users/aleksa.jpg"/></td>
                     <td>Алекси</td>
                     <td>
@@ -169,43 +204,13 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>17</td>
-                    <td><img src="../../images/users/iskra.jpg"/></td>
-                    <td>Искра</td>
-                    <td>
-                        <div>13</div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>18</td>
-                    <td><img src="../../images/users/cat.jpg"/></td>
-                    <td>Кошка</td>
-                    <td>
-                        <div>12</div>
-                        <div>
-                            <span><img src="../../images/green_up.png">3</span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>19</td>
-                    <td><img src="../../images/users/alisa.jpg"/></td>
-                    <td>Алиса (Лера)</td>
-                    <td>
-                        <div>12</div>
-                        <div>
-                            <span><img src="../../images/green_up.png">3</span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
                     <td>20</td>
-                    <td><img src="../../images/users/sharlotta.jpg"/></td>
-                    <td>Шарлотта</td>
+                    <td><img src="../../images/users/jnec.jpg"/></td>
+                    <td>Жнец</td>
                     <td>
-                        <div>12</div>
+                        <div>14</div>
                         <div>
-                            <span><img src="../../images/green_up.png">12</span>
+                            <span><img src="../../images/green_up.png">3</span>
                         </div>
                     </td>
                 </tr>
