--- a/timetable/consigliere.html
+++ b/timetable/consigliere.html
@@ -9,74 +9,131 @@
 </head>
 <body>
     <h1><img src="images/consil.png">Consigliere 2019</h1>
-    <table id='game_1'>
-        <tr><td colspan="6" class="game_title">Игра 1</td></tr>
-        <tr><td colspan='2'>Стол 1</td><td colspan='2'>Стол 2</td><td colspan='2'>Стол 3</td></tr>
-        <tr><td>1</td><td>Топ-2</td><td>1</td><td>Рыжий неадекват - 3</td><td>1</td><td>Убей меня полностью</td></tr>
-        <tr><td>2</td><td>S&M</td><td>2</td><td>Оранжевое настроение</td><td>2</td><td>Без вариантов</td></tr>
-        <tr><td>3</td><td>Cвоим ходом</td><td>3</td><td>В бой идут одни старики</td><td>3</td><td>Хориндер 3.0</td></tr>
-        <tr><td>4</td><td>Заочно черные</td><td>4</td><td>А Училка у Авроры </br>все покрала помидоры!</td><td>4</td><td>Котики под наркотиком</td></tr>
-        <tr><td>5</td><td>Бородинские хлопцы</td><td>5</td><td>Лангольеры</td><td>5</td><td>Куба Либре</td></tr>
-        <tr><td>6</td><td>Бодунята</td><td>6</td><td>БамбАллейо</td><td>6</td><td>Вези меня, вези</td></tr>
-        <tr><td>7</td><td>Блуждающая пуля</td><td>7</td><td>Звездный крот</td><td>7</td><td>ФБР</td></tr>
-        <tr><td>8</td><td>Online</td><td>8</td><td>О Sole mio</td><td>8</td><td>Пёс да лис</td></tr>
-        <tr><td>9</td><td>Peace data</td><td>9</td><td>Скай и на дуде игрец</td><td>9</td><td>Какой 7?</td></tr>
-        <tr><td>10</td><td>ДОМИМУР</td><td>10</td></td><td>Double blondy moms</td><td>10</td><td>CruSh</td></tr>
-    </table>
-    <table id='game_2'>
-        <tr><td colspan="6" class="game_title">Игра 2</td></tr>
-        <tr><td colspan='2'>Стол 1</td><td colspan='2'>Стол 2</td><td colspan='2'>Стол 3</td></tr>
-        <tr><td>1</td><td>Peace data</td><td>1</td><td>Без вариантов</td><td>1</td><td>Бородинские хлопцы</td></tr>
-        <tr><td>2</td><td>Бодунята</td><td>2</td><td>Убей меня полностью</td><td>2</td><td>ФБР</td></tr>
-        <tr><td>3</td><td>Скай и на дуде игрец</td><td>3</td><td>Звездный крот</td><td>3</td><td>Котики под наркотиком</td></tr>
-        <tr><td>4</td><td>S&M</td><td>4</td><td>О Sole mio</td><td>4</td><td>Заочно черные</td></tr>
-        <tr><td>5</td><td>Топ-2</td><td>5</td><td>Какой 7?</td><td>5</td><td>Double blondy moms</td></tr>
-        <tr><td>6</td><td>Лангольеры</td><td>6</td><td>Online</td><td>6</td><td>Блуждающая пуля</td></tr>
-        <tr><td>7</td><td>А Училка у Авроры </br>все покрала помидоры!</td><td>7</td><td>Хориндер 3.0</td><td>7</td><td>Куба Либре</td></tr>
-        <tr><td>8</td><td>В бой идут одни старики</td><td>8</td><td>Пёс да лис</td><td>8</td><td>Cвоим ходом</td></tr>
-        <tr><td>9</td><td>Рыжий неадекват - 3</td><td>9</td><td>Вези меня, вези </td><td>9</td><td>ДОМИМУР</td></tr>
-        <tr><td>10</td><td>БамбАллейо</td><td>10</td></td><td>CruSh</td><td>10</td><td>Оранжевое настроение</td></tr>
-    </table>
-    <table id='game_3'>
-        <tr><td colspan="6" class="game_title">Игра 3</td></tr>
-        <tr><td colspan='2'>Стол 1</td><td colspan='2'>Стол 2</td><td colspan='2'>Стол 3</td></tr>
-        <tr><td>1</td><td>БамбАллейо</td><td>1</td><td>Котики под наркотиком</td><td>1</td><td>Куба Либре</td></tr>
-        <tr><td>2</td><td>Блуждающая пуля</td><td>2</td><td>Рыжий неадекват - 3</td><td>2</td><td>Звездный крот</td></tr>
-        <tr><td>3</td><td>Топ-2</td><td>3</td><td>Оранжевое настроение</td><td>3</td><td>Лангольеры</td></tr>
-        <tr><td>4</td><td>Double blondy moms</td><td>4</td><td>CruSh</td><td>4</td><td>Вези меня, вези</td></tr>
-        <tr><td>5</td><td>В бой идут одни старики</td><td>5</td><td>Убей меня полностью</td><td>5</td><td>ФБР</td></tr>
-        <tr><td>6</td><td>Без вариантов</td><td>6</td><td>S&M</td><td>6</td><td>Какой 7?</td></tr>
-        <tr><td>7</td><td>Скай и на дуде игрец</td><td>7</td><td>Пёс да лис</td><td>7</td><td>Бородинские хлопцы</td></tr>
-        <tr><td>8</td><td>Хориндер 3.0</td><td>8</td><td>Бодунята</td><td>8</td><td>О Sole mio</td></tr>
-        <tr><td>9</td><td>Заочно черные</td><td>9</td><td>Peace data</td><td>9</td><td>Online</td></tr>
-        <tr><td>10</td><td>А Училка у Авроры </br>все покрала помидоры!</td><td>10</td></td><td>Cвоим ходом</td><td>10</td><td>ДОМИМУР</td></tr>
-    </table>
-    <table id='game_4'>
-        <tr><td colspan="6" class="game_title">Игра 4</td></tr>
-        <tr><td colspan='2'>Стол 1</td><td colspan='2'>Стол 2</td><td colspan='2'>Стол 3</td></tr>
-        <tr><td>1</td><td>А Училка у Авроры </br>все покрала помидоры!</td><td>1</td><td>В бой идут одни старики</td><td>1</td><td>Double blondy moms</td></tr>
-        <tr><td>2</td><td>Убей меня полностью</td><td>2</td><td>БамбАллейо</td><td>2</td><td>Скай и на дуде игрец</td></tr>
-        <tr><td>3</td><td>Рыжий неадекват - 3</td><td>3</td><td>CruSh</td><td>3</td><td>Топ-2</td></tr>
-        <tr><td>4</td><td>Пёс да лис</td><td>4</td><td>Оранжевое настроение</td><td>4</td><td>Хориндер 3.0</td></tr>
-        <tr><td>5</td><td>О Sole mio</td><td>5</td><td>Peace data</td><td>5</td><td>Куба Либре</td></tr>
-        <tr><td>6</td><td>Какой 7?</td><td>6</td><td>Online</td><td>6</td><td>ФБР</td></tr>
-        <tr><td>7</td><td>Без вариантов</td><td>7</td><td>Бородинские хлопцы</td><td>7</td><td>Вези меня, вези</td></tr>
-        <tr><td>8</td><td>Котики под наркотиком</td><td>8</td><td>S&M</td><td>8</td><td>Заочно черные</td></tr>
-        <tr><td>9</td><td>ДОМИМУР</td><td>9</td><td>Бодунята</td><td>9</td><td>Лангольеры</td></tr>
-        <tr><td>10</td><td>Звездный крот</td><td>10</td></td><td>Блуждающая пуля</td><td>10</td><td>Cвоим ходом</td></tr>
-    </table>
-    <table id='game_5'>
-        <tr><td colspan="6" class="game_title">Игра 5</td></tr>
-        <tr><td colspan='2'>Стол 1</td><td colspan='2'>Стол 2</td><td colspan='2'>Стол 3</td></tr>
-        <tr><td>1</td><td>Вези меня, вези</td><td>1</td><td>Блуждающая пуля</td><td>1</td><td>Лангольеры</td></tr>
-        <tr><td>2</td><td>Бородинские хлопцы</td><td>2</td><td>Куба Либре</td><td>2</td><td>Звездный крот</td></tr>
-        <tr><td>3</td><td>Cвоим ходом</td><td>3</td><td>Бодунята</td><td>3</td><td>А Училка у Авроры </br>все покрала помидоры!</td></tr>
-        <tr><td>4</td><td>Оранжевое настроение</td><td>4</td><td>Заочно черные</td><td>4</td><td>S&M</td></tr>
-        <tr><td>5</td><td>CruSh</td><td>5</td><td>Double blondy moms</td><td>5</td><td>Пёс да лис</td></tr>
-        <tr><td>6</td><td>ДОМИМУР</td><td>6</td><td>Убей меня полностью</td><td>6</td><td>БамбАллейо</td></tr>
-        <tr><td>7</td><td>Рыжий неадекват - 3</td><td>7</td><td>Хориндер 3.0</td><td>7</td><td>Котики под наркотиком</td></tr>
-        <tr><td>8</td><td>ФБР</td><td>8</td><td>Топ-2</td><td>8</td><td>В бой идут одни старики</td></tr>
-        <tr><td>9</td><td>Без вариантов</td><td>9</td><td>Какой 7?</td><td>9</td><td>О Sole mio</td></tr>
-        <tr><td>10</td><td>Online</td><td>10</td></td><td>Peace data</td><td>10</td><td>Скай и на дуде игрец</td></tr>
+    <table id='game_6'>
+        <tr><td colspan="13" class="game_title">Результаты</td></tr>
+        <tr>
+            <td colspan="2"></td><td>Игра 1</td><td>Игра 2</td><td>Игра 3</td><td>Игра 4</td><td>Игра 5</td>
+            <td>Игра 6</td><td>Игра 7</td><td>Игра 8</td><td>Сумма доп балов</td><td>Сi</td><td>Всего</td>
+        </tr>
+        <tr>
+            <td>1</td><td>Double blondy moms</td><td>1</td><td>1</td><td>1.4</td><td>1</td><td>1</td>
+            <td>1.56</td><td>0.52</td><td>1.625</td><td>1.25</td><td></td><td>9.105</td>
+        </tr>
+        <tr>
+            <td>2</td><td>А Училка у Авроры все покрала помидоры!</td><td>1</td><td></td><td>1</td><td>1</td><td>1.3</td>
+            <td>1.3</td><td>1.3</td><td>1.3</td><td>0.3</td><td></td><td>8.2</td>
+        </tr>
+        <tr>
+            <td>3</td><td>Скай и на дуде игрец</td><td>1.2</td><td>1.3</td><td></td><td>1</td><td>1.2</td>
+            <td>1.3</td><td>1.69</td><td></td><td>1</td><td></td><td>7.69</td>
+        </tr>
+        <tr>
+            <td>4</td><td>CruSh</td><td></td><td>1.2</td><td>1</td><td>1.3</td><td>1.3</td>
+            <td>1.3</td><td></td><td>1.3</td><td>0.8</td><td></td><td>7.4</td>
+        </tr>
+        <tr>
+            <td>5</td><td>Звездный крот</td><td></td><td>1</td><td></td><td>1</td><td>1.3</td>
+            <td>1.3</td><td>1.3</td><td>1.3</td><td>0.3</td><td></td><td>7.2</td>
+        </tr>
+        <tr>
+            <td>6</td><td>Убей меня полностью</td><td>1</td><td></td><td>1.3</td><td>1.3</td><td></td>
+            <td></td><td>1.69</td><td>1.69</td><td>1.2</td><td>0,13</td><td>7,11</td>
+        </tr>
+        <tr>
+            <td>7</td><td>Рыжий неадекват - 3</td><td>1</td><td>1.3</td><td>1</td><td>1</td><td></td>
+            <td>1.3</td><td></td><td>1.3</td><td>0.3</td><td></td><td>6.9</td>
+        </tr>
+        <tr>
+            <td>8</td><td>Какой 7?</td><td></td><td>1.4</td><td></td><td>1.2</td><td>1</td>
+            <td></td><td>1.69</td><td>1.3</td><td>0.9</td><td></td><td>6,59</td>
+        </tr>
+        <tr>
+            <td>9</td><td>ДОМИМУР</td><td>1</td><td>1.3</td><td></td><td></td><td>1</td>
+            <td>1.3</td><td>0.325</td><td>1.3</td><td>0.55</td><td>0.173</td><td>6.4</td>
+        </tr>
+        <tr>
+            <td>10</td><td>В бой идут одни старики</td><td>1</td><td></td><td>1</td><td>1.2</td><td>1</td>
+            <td></td><td></td><td>1.69</td><td>0.5</td><td>0.27</td><td>6.16</td>
+        </tr>
+        <tr>
+            <td>11</td><td>Вези меня, вези</td><td></td><td>1.2</td><td></td><td>-0.4</td><td>0</td>
+            <td>1.56</td><td>1.69</td><td>1.3</td><td>0.3</td><td>0.8</td><td>6.15</td>
+        </tr>
+        <tr>
+            <td>12</td><td>Online</td><td>1.3</td><td>1</td><td>1</td><td></td><td></td>
+            <td></td><td>1.3</td><td>1.3</td><td>0.3</td><td>0.13</td><td>6.03</td>
+        </tr>
+        <tr>
+            <td>13</td><td>Пёс да лис</td><td></td><td>1</td><td>1</td><td></td><td>1</td>
+            <td></td><td>1.3</td><td>1.56</td><td>0.2</td><td></td><td>5.86</td>
+        </tr>
+        <tr>
+            <td>14</td><td>Куба Либре</td><td></td><td>1</td><td></td><td></td><td></td>
+            <td>1.69</td><td>1.3</td><td>1.625</td><td>0.55</td><td>0.173</td><td>5.79</td>
+        </tr>
+        <tr>
+            <td>15</td><td>Без вариантов</td><td>1</td><td>1</td><td></td><td>1</td><td>1</td>
+            <td>1.56</td><td></td><td></td><td>0.2</td><td>0.13</td><td>5.69</td>
+        </tr>
+        <tr>
+            <td>16</td><td>Котики под наркотиком</td><td>1.2</td><td></td><td>1.2</td><td></td><td></td>
+            <td></td><td>1.69</td><td>1.3</td><td>0.7</td><td></td><td>5.39</td>
+        </tr>
+        <tr>
+            <td>17</td><td>Cвоим ходом</td><td>1.3</td><td>1</td><td>0</td><td>0</td><td>1.4</td>
+            <td>1.56</td><td></td><td></td><td>0.9</td><td></td><td>5.26</td>
+        </tr>
+        <tr>
+            <td>18</td><td>ФБР</td><td></td><td>1.3</td><td>1.3</td><td></td><td>1</td>
+            <td></td><td></td><td>1.56</td><td>0.8</td><td></td><td>5.16</td>
+        </tr>
+        <tr>
+            <td>19</td><td>Peace data</td><td>1</td><td></td><td>1</td><td>1.2</td><td></td>
+            <td>0.39</td><td>0</td><td>1.56</td><td>0.7</td><td></td><td>5.15</td>
+        </tr>
+        <tr>
+            <td>20</td><td>S&M</td><td>1</td><td></td><td></td><td></td><td></td>
+            <td>1.3</td><td>1.3</td><td>1.3</td><td></td><td></td><td>4.9</td>
+        </tr>
+        <tr>
+            <td>21</td><td>Бородинские хлопцы</td><td>1</td><td></td><td></td><td></td><td>1</td>
+            <td>1.3</td><td></td><td>1.3</td><td></td><td></td><td>4.6</td>
+        </tr>
+        <tr>
+            <td>22</td><td>Лангольеры</td><td></td><td></td><td>1.2</td><td></td><td>1.2</td>
+            <td></td><td></td><td>1.56</td><td>0.6</td><td>0.173</td><td>4.133</td>
+        </tr>
+        <tr>
+            <td>23</td><td>БамбАллейо</td><td>1</td><td></td><td></td><td></td><td></td>
+            <td>1.56</td><td></td><td>1.56</td><td>0.4</td><td></td><td>4.12</td>
+        </tr>
+        <tr>
+            <td>24</td><td>Топ-2</td><td></td><td>1</td><td></td><td></td><td></td>
+            <td>1.56</td><td></td><td>1.3</td><td>0.2</td><td>0.173</td><td>4.03</td>
+        </tr>
+        <tr>
+            <td>25</td><td>Бодунята</td><td>1.4</td><td></td><td>1.2</td><td></td><td></td>
+            <td></td><td></td><td>1.3</td><td>0.6</td><td></td><td>3.9</td>
+        </tr>
+        <tr>
+            <td>26</td><td>Хориндер 3.0</td><td></td><td></td><td>0.2</td><td>1.3</td><td></td>
+            <td>1.3</td><td></td><td>0.65</td><td></td><td>0,27</td><td>3.72</td>
+        </tr>
+        <tr>
+            <td>27</td><td>Оранжевое настроение</td><td></td><td></td><td>1</td><td></td><td>1.4</td>
+            <td></td><td>1.3</td><td></td><td>0.4</td><td></td><td>3.7</td>
+        </tr>
+        <tr>
+            <td>28</td><td>Заочно черные</td><td></td><td>1.3</td><td></td><td>1</td><td></td>
+            <td></td><td></td><td></td><td>0.3</td><td></td><td>2.3</td>
+        </tr>
+        <tr>
+            <td>29</td><td>О Sole mio</td><td>1</td><td></td><td></td><td></td><td>1</td>
+            <td></td><td></td><td></td><td></td><td></td><td>2</td>
+        </tr>
+        <tr>
+            <td>30</td><td>Блуждающая пуля</td><td></td><td>1</td><td></td><td></td><td></td>
+            <td></td><td></td><td></td><td></td><td></td><td>1</td>
+        </tr>
     </table>
 </body>
