[XML] Consigliere tournaments

--- a/x-maf_league/content/pages/rating.html
+++ b/x-maf_league/content/pages/rating.html
@@ -24,9 +24,6 @@
                     <td>Архи</td>
                     <td>
                         <div>38,7</div>
-                        <div>
-                            <span><img src="../../images/green_up.png">5</span>
-                        </div>
                     </td>
                 </tr>
                 <tr>
@@ -34,9 +31,9 @@
                     <td><img src="../../images/users/kris.jpg"/></td>
                     <td>Крис</td>
                     <td>
-                        <div>30,1</div>
+                        <div>32,1</div>
                         <div>
-                            <span><img src="../../images/green_up.png">3</span>
+                            <span><img src="../../images/green_up.png">2</span>
                         </div>
                     </td>
                 </tr>
@@ -50,99 +47,126 @@
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td><img src="../../images/users/vb.jpg"/></td>
-                    <td>Валерун-Балерун</td>
+                    <td><img src="../../images/users/zodiak.jpg"/></td>
+                    <td>Зодиак</td>
                     <td>
-                        <div>27,7</div>
+                        <div>30</div>
                         <div>
-                            <span><img src="../../images/green_up.png">11</span>
+                            <span><img src="../../images/green_up.png">5</span>
                         </div>
                     </td>
                 </tr>
                 <tr>
                     <td>5</td>
-                    <td><img src="../../images/users/iskra.jpg"/></td>
-                    <td>Искра</td>
+                    <td><img src="../../images/users/flash.jpg"/></td>
+                    <td>Флэш</td>
                     <td>
-                        <div>27</div>
+                        <div>28,3</div>
                         <div>
-                            <span><img src="../../images/green_up.png">14</span>
+                            <span><img src="../../images/green_up.png">2</span>
                         </div>
                     </td>
                 </tr>
                 <tr>
                     <td>6</td>
-                    <td><img src="../../images/users/flash.jpg"/></td>
-                    <td>Флэш</td>
+                    <td><img src="../../images/users/kinder.jpg"/></td>
+                    <td>Киндер</td>
                     <td>
-                        <div>26,3</div>
+                        <div>28,2</div>
+                        <div>
+                            <span><img src="../../images/green_up.png">2</span>
+                        </div>
                     </td>
                 </tr>
                 <tr>
                     <td>7</td>
-                    <td><img src="../../images/users/kinder.jpg"/></td>
-                    <td>Киндер</td>
+                    <td><img src="../../images/users/vb.jpg"/></td>
+                    <td>Валерун-Балерун</td>
                     <td>
-                        <div>26,2</div>
-                        <div>
-                            <span><img src="../../images/green_up.png">4</span>
-                        </div>
+                        <div>27,7</div>
                     </td>
                 </tr>
                 <tr>
                     <td>8</td>
-                    <td><img src="../../images/users/zodiak.jpg"/></td>
-                    <td>Зодиак</td>
+                    <td><img src="../../images/users/iskra.jpg"/></td>
+                    <td>Искра</td>
                     <td>
-                        <div>25</div>
-                        <div>
-                            <span><img src="../../images/green_up.png">3</span>
-                        </div>
+                        <div>27</div>
                     </td>
                 </tr>
                 <tr>
                     <td>9</td>
-                    <td><img src="../../images/users/yesterday.jpg"/></td>
-                    <td>Yesterday</td>
+                    <td><img src="../../images/users/avrora.jpg"/></td>
+                    <td>Аврора</td>
                     <td>
-                        <div>23</div>
+                        <div>25</div>
                         <div>
-                            <span><img src="../../images/green_up.png">3</span>
+                            <span><img src="../../images/green_up.png">10</span>
                         </div>
                     </td>
                 </tr>
                 <tr>
                     <td>10</td>
+                    <td><img src="../../images/users/artik.jpg"/></td>
+                    <td>Артик</td>
+                    <td>
+                        <div>24,9</div>
+                        <div>
+                            <span><img src="../../images/green_up.png">2</span>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>11</td>
+                    <td><img src="../../images/users/yesterday.jpg"/></td>
+                    <td>Yesterday</td>
+                    <td>
+                        <div>23</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>12</td>
                     <td><img src="../../images/users/moriarty.jpg"/></td>
                     <td>Мориарти</td>
                     <td>
                         <div>23</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>13</td>
+                    <td><img src="../../images/users/plesen.jpg"/></td>
+                    <td>Плесень</td>
+                    <td>
+                        <div>23</div>
+                        <div>
+                            <span><img src="../../images/green_up.png">2</span>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>14</td>
+                    <td><img src="../../images/users/jnec.jpg"/></td>
+                    <td>Жнец</td>
+                    <td>
+                        <div>22</div>
                         <div>
                             <span><img src="../../images/green_up.png">8</span>
                         </div>
                     </td>
                 </tr>
                 <tr>
-                    <td>11</td>
-                    <td><img src="../../images/users/artik.jpg"/></td>
-                    <td>Артик</td>
+                    <td>15</td>
+                    <td><img src="../../images/users/sharlotta.jpg"/></td>
+                    <td>Шарлотта Казираги</td>
                     <td>
-                        <div>22,9</div>
+                        <div>19</div>
                         <div>
-                            <span><img src="../../images/green_up.png">6</span>
+                            <span><img src="../../images/green_up.png">7</span>
                         </div>
                     </td>
                 </tr>
                 <tr>
-                    <td>12</td>
-                    <td><img src="../../images/users/plesen.jpg"/></td>
-                    <td>Плесень</td>
-                    <td>
-                        <div>21</div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>13</td>
+                    <td>16</td>
                     <td><img src="../../images/users/chuha.jpg"/></td>
                     <td>Чуха</td>
                     <td>
@@ -150,7 +174,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>14</td>
+                    <td>17</td>
                     <td><img src="../../images/users/reinoven.jpg"/></td>
                     <td>Рейновен</td>
                     <td>
@@ -158,59 +182,35 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>15</td>
-                    <td><img src="../../images/users/ged.jpg"/></td>
-                    <td>Гед</td>
-                    <td>
-                        <div>15</div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>16</td>
+                    <td>18</td>
                     <td><img src="../../images/users/alisa.jpg"/></td>
                     <td>Алиса (Лера)</td>
                     <td>
-                        <div>15</div>
+                        <div>17</div>
                         <div>
-                            <span><img src="../../images/green_up.png">3</span>
+                            <span><img src="../../images/green_up.png">2</span>
                         </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>17</td>
-                    <td><img src="../../images/users/avrora.jpg"/></td>
-                    <td>Аврора</td>
-                    <td>
-                        <div>15</div>
-                        <div>
-                            <span><img src="../../images/green_up.png">6</span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>18</td>
-                    <td><img src="../../images/users/krista.jpg"/></td>
-                    <td>Криста</td>
-                    <td>
-                        <div>14,8</div>
                     </td>
                 </tr>
                 <tr>
                     <td>19</td>
-                    <td><img src="../../images/users/aleksa.jpg"/></td>
-                    <td>Алекси</td>
+                    <td><img src="../../images/users/kryz.jpg"/></td>
+                    <td>Крузенштерн</td>
                     <td>
-                        <div>14</div>
+                        <div>17</div>
+                        <div>
+                            <span><img src="../../images/green_up.png">7</span>
+                        </div>
                     </td>
                 </tr>
                 <tr>
                     <td>20</td>
-                    <td><img src="../../images/users/jnec.jpg"/></td>
-                    <td>Жнец</td>
+                    <td><img src="../../images/users/aleksa.jpg"/></td>
+                    <td>Алекси</td>
                     <td>
-                        <div>14</div>
+                        <div>16</div>
                         <div>
-                            <span><img src="../../images/green_up.png">3</span>
+                            <span><img src="../../images/green_up.png">2</span>
                         </div>
                     </td>
                 </tr>
