--- a/x-maf_league/content/pages/rating.html
+++ b/x-maf_league/content/pages/rating.html
@@ -20,6 +20,39 @@
             <table>
                 <tr>
                     <td>1</td>
+                    <td><img src="../../images/users/kris.jpg"/></td>
+                    <td>Крис</td>
+                    <td>
+                        <div>53,1</div>
+                        <div>
+                            <span><img src="../../images/green_up.png">21</span>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td><img src="../../images/users/iskra.jpg"/></td>
+                    <td>Искра</td>
+                    <td>
+                        <div>45</div>
+                        <div>
+                            <span><img src="../../images/green_up.png">18</span>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td><img src="../../images/users/flash.jpg"/></td>
+                    <td>Флэш</td>
+                    <td>
+                        <div>43,3</div>
+                        <div>
+                            <span><img src="../../images/green_up.png">15</span>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>4</td>
                     <td><img src="../../images/users/arhi.jpg"/></td>
                     <td>Архи</td>
                     <td>
@@ -27,18 +60,40 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>2</td>
-                    <td><img src="../../images/users/kris.jpg"/></td>
-                    <td>Крис</td>
+                    <td>5</td>
+                    <td><img src="../../images/users/yesterday.jpg"/></td>
+                    <td>Yesterday</td>
                     <td>
-                        <div>32,1</div>
+                        <div>35</div>
                         <div>
-                            <span><img src="../../images/green_up.png">2</span>
+                            <span><img src="../../images/green_up.png">12</span>
                         </div>
                     </td>
                 </tr>
                 <tr>
-                    <td>3</td>
+                    <td>6</td>
+                    <td><img src="../../images/users/artik.jpg"/></td>
+                    <td>Артик</td>
+                    <td>
+                        <div>33,9</div>
+                        <div>
+                            <span><img src="../../images/green_up.png">9</span>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td><img src="../../images/users/kinder.jpg"/></td>
+                    <td>Киндер</td>
+                    <td>
+                        <div>31,2</div>
+                        <div>
+                            <span><img src="../../images/green_up.png">3</span>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>8</td>
                     <td><img src="../../images/users/voron.jpg"/></td>
                     <td>Ворон</td>
                     <td>
@@ -46,40 +101,15 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>4</td>
+                    <td>9</td>
                     <td><img src="../../images/users/zodiak.jpg"/></td>
                     <td>Зодиак</td>
                     <td>
                         <div>30</div>
-                        <div>
-                            <span><img src="../../images/green_up.png">5</span>
-                        </div>
                     </td>
                 </tr>
                 <tr>
-                    <td>5</td>
-                    <td><img src="../../images/users/flash.jpg"/></td>
-                    <td>Флэш</td>
-                    <td>
-                        <div>28,3</div>
-                        <div>
-                            <span><img src="../../images/green_up.png">2</span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>6</td>
-                    <td><img src="../../images/users/kinder.jpg"/></td>
-                    <td>Киндер</td>
-                    <td>
-                        <div>28,2</div>
-                        <div>
-                            <span><img src="../../images/green_up.png">2</span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>7</td>
+                    <td>10</td>
                     <td><img src="../../images/users/vb.jpg"/></td>
                     <td>Валерун-Балерун</td>
                     <td>
@@ -87,45 +117,26 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>8</td>
-                    <td><img src="../../images/users/iskra.jpg"/></td>
-                    <td>Искра</td>
-                    <td>
-                        <div>27</div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>9</td>
+                    <td>11</td>
                     <td><img src="../../images/users/avrora.jpg"/></td>
                     <td>Аврора</td>
                     <td>
                         <div>25</div>
-                        <div>
-                            <span><img src="../../images/green_up.png">10</span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>10</td>
-                    <td><img src="../../images/users/artik.jpg"/></td>
-                    <td>Артик</td>
-                    <td>
-                        <div>24,9</div>
-                        <div>
-                            <span><img src="../../images/green_up.png">2</span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>11</td>
-                    <td><img src="../../images/users/yesterday.jpg"/></td>
-                    <td>Yesterday</td>
-                    <td>
-                        <div>23</div>
                     </td>
                 </tr>
                 <tr>
                     <td>12</td>
+                    <td><img src="../../images/users/mag.jpg"/></td>
+                    <td>Маг</td>
+                    <td>
+                        <div>24</div>
+                        <div>
+                            <span><img src="../../images/green_up.png">11</span>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>13</td>
                     <td><img src="../../images/users/moriarty.jpg"/></td>
                     <td>Мориарти</td>
                     <td>
@@ -133,40 +144,31 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>13</td>
+                    <td>14</td>
                     <td><img src="../../images/users/plesen.jpg"/></td>
                     <td>Плесень</td>
                     <td>
                         <div>23</div>
-                        <div>
-                            <span><img src="../../images/green_up.png">2</span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>14</td>
-                    <td><img src="../../images/users/jnec.jpg"/></td>
-                    <td>Жнец</td>
-                    <td>
-                        <div>22</div>
-                        <div>
-                            <span><img src="../../images/green_up.png">8</span>
-                        </div>
                     </td>
                 </tr>
                 <tr>
                     <td>15</td>
-                    <td><img src="../../images/users/sharlotta.jpg"/></td>
-                    <td>Шарлотта Казираги</td>
+                    <td><img src="../../images/users/jnec.jpg"/></td>
+                    <td>Жнец</td>
                     <td>
-                        <div>19</div>
-                        <div>
-                            <span><img src="../../images/green_up.png">7</span>
-                        </div>
+                        <div>22</div>
                     </td>
                 </tr>
                 <tr>
                     <td>16</td>
+                    <td><img src="../../images/users/sharlotta.jpg"/></td>
+                    <td>Шарлотта Казираги</td>
+                    <td>
+                        <div>19</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>17</td>
                     <td><img src="../../images/users/chuha.jpg"/></td>
                     <td>Чуха</td>
                     <td>
@@ -174,7 +176,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>17</td>
+                    <td>18</td>
                     <td><img src="../../images/users/reinoven.jpg"/></td>
                     <td>Рейновен</td>
                     <td>
@@ -182,36 +184,19 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>18</td>
+                    <td>19</td>
                     <td><img src="../../images/users/alisa.jpg"/></td>
                     <td>Алиса (Лера)</td>
                     <td>
                         <div>17</div>
-                        <div>
-                            <span><img src="../../images/green_up.png">2</span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>19</td>
-                    <td><img src="../../images/users/kryz.jpg"/></td>
-                    <td>Крузенштерн</td>
-                    <td>
-                        <div>17</div>
-                        <div>
-                            <span><img src="../../images/green_up.png">7</span>
-                        </div>
                     </td>
                 </tr>
                 <tr>
                     <td>20</td>
-                    <td><img src="../../images/users/aleksa.jpg"/></td>
-                    <td>Алекси</td>
+                    <td><img src="../../images/users/kryz.jpg"/></td>
+                    <td>Крузенштерн</td>
                     <td>
-                        <div>16</div>
-                        <div>
-                            <span><img src="../../images/green_up.png">2</span>
-                        </div>
+                        <div>17</div>
                     </td>
                 </tr>
             </table>
