[RT] table structure was updated

--- a/thomas-corner/content/pages/oldynameste.html
+++ b/thomas-corner/content/pages/oldynameste.html
@@ -1,6 +1,6 @@
 <head>
-    <title>Thomas Gaming</title>
-    <link rel="shortcut icon" href="../../images/Tomas-logo.jpg" type="image/x-icon" />
+    <title>Red Table League</title>
+    <link rel="shortcut icon" href="../../images/red_table_icon.webp" type="image/x-icon" />
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="../../scripts/rt_temp_json.js"></script>
     <script type="text/javascript" src="../../scripts/rt_temp.js"></script>
@@ -11,22 +11,6 @@
 
 <body>
     <div class="header">
-        <div class="container">
-            <a href="new/home_new.html">
-                <img class="logo" src="../../images/tg-icon.png" />
-            </a>
-            <nav class="menu_wrapper">
-                <ul>
-                    <li><a href="players_new.html">Players</a></li>
-                    <li><a href="rating_new.html">Rating</a></li>
-                    <li><a href="archive_new.html">Archive</a></li>
-                    <li><a href="about_new.html">About</a></li>
-                </ul>
-            </nav>
-            <a class="rt_temp" href="oldynameste.html">
-                <img class="logo" src="../../images/red_table_icon.webp" />
-            </a>
-        </div>
         <div class="content tr_temp_content">
             <h1>Лига Красного Стола</h1>
             <div class="table"></div>
