[KS] table color's update

--- a/thomas-corner/content/pages/oldynameste.html
+++ b/thomas-corner/content/pages/oldynameste.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="header">
-        <div class="content tr_temp_content">
+        <div class="tr_temp_content">
             <h1>Лига Красного Стола</h1>
             <div class="table"></div>
         </div>
