[KS] background was fixed

--- a/thomas-corner/content/pages/oldynameste.html
+++ b/thomas-corner/content/pages/oldynameste.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="tr_temp_content">
+    <div class="rt_temp_header">
+        <div class="rt_temp_content">
             <h1>Лига Красного Стола</h1>
             <div class="table"></div>
         </div>
