--- a/thomas-corner/content/pages/oldynameste.html
+++ b/thomas-corner/content/pages/oldynameste.html
@@ -4,7 +4,7 @@
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="../../scripts/rt_temp_json.js"></script>
     <script type="text/javascript" src="../../scripts/rt_temp.js"></script>
-    <link rel="stylesheet" href="../../styles/test.css">
+    <link rel="stylesheet" href="../../styles/red_table.css">
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
