[TG] League-info was cleaned

--- a/thomas-corner/content/pages/oldynameste.html
+++ b/thomas-corner/content/pages/oldynameste.html
@@ -2,8 +2,8 @@
     <title>Red Table League</title>
     <link rel="shortcut icon" href="../../images/red_table_icon.webp" type="image/x-icon" />
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="../../scripts/rt_temp_json.js"></script>
-    <script type="text/javascript" src="../../scripts/rt_temp.js"></script>
+    <script type="text/javascript" src="../../scripts/red_table_json.js"></script>
+    <script type="text/javascript" src="../../scripts/red_table.js"></script>
     <link rel="stylesheet" href="../../styles/red_table.css">
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
