--- a/sakura-league/content/pages/league-spreadsheet.html
+++ b/sakura-league/content/pages/league-spreadsheet.html
@@ -1,36 +1,40 @@
-<html data-ng-app="fantasyApp">
+<html data-ng-app="spreadsheetApp"></html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Sakura League Spreadsheet</title>
         <link rel="shortcut icon" href="../../etc/images/sakura-icon.jpg" type="image/x-icon" />
-
-        <link rel="stylesheet" href="../../etc/styles/main.css" />
-
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
-        <script type="text/javascript" src="../../etc/scripts/players.json.js"></script>
-        <script type="text/javascript" src="../../etc/scripts/fantasyLeagueController.js"></script>
-    
+        <script type="text/javascript" src="../../etc/scripts/jsons/spreadsheet.json.js"></script>
+        <script type="text/javascript" src="../../etc/scripts/controllers/spreadsheetController.js"></script>
     </head>
-    <body data-ng-controller="fantasyController"> 
-        <div class="player-list" data-ng-repeat="player in playerList">
-            <img data-ng-class="{'selected-player': player.isSelected, 'unavailable-player ': player.isUnavailable}" 
-                 data-ng-click="onImageClick(player)" class="player-list_image" src="{{player.imageUrl}}" />
-            <p data-ng-class="{'selected-player_text': player.isSelected, 'unavailable-player_text': player.isUnavailable}">
-                {{player.name}} - {{player.rating}}
-            </p>
-        </div>
-        <div class="total-score">
-            <p>Total Score: {{totalScore}}</p>
-        </div>
 
-        <div class="my-team">
-            <p>Your Team</p>
+    <body data-ng-controller="spreadsheetController">
             <div class="player-list" data-ng-repeat="player in playerList">
-                <div data-ng-if="player.isSelected">
-                    <img class="player-list_image" src="{{player.imageUrl}}" />
-                    <p>{{player.name}} - {{player.rating}}</p>
-                </div>
             </div>
-        </div>
+            <table class="rt_temp_table" cellspacing="3" cellpadding="5">
+                <tr class="table_header">
+                    <td>#</td><td>Team</td><td>Players</td><td>Round 1</td><td>Round 2</td><td>Round 3</td>
+                    <td>Total Player</td><td>Total Team</td>
+                </tr>
+                <tbody data-ng-repeat="team in teamList">
+                    <tr >
+                        <td rowspan="3">{{$index + 1}}</td>
+                        <td rowspan="3" class="team_name">{{team.name}}</td>
+                        <td>{{team.players[0].nickname}}</td>
+                        <td class="points">{{team.players[0].game_1}}</td>
+                        <td class="points">{{team.players[0].game_2}}</td>
+                        <td class="points">{{team.players[0].game_3}}</td>
+                        <td class="points">{{team.players[0].total}}</td>
+                        <td rowspan="3" class="points">{{team.total}}</td>
+                    </tr>
+                    <tr>
+                        <td>{{team.players[1].nickname}}</td>
+                        <td class="points">{{team.players[1].game_1}}</td>
+                        <td class="points">{{team.players[1].game_2}}</td>
+                        <td class="points">{{team.players[1].game_3}}</td>
+                        <td class="points">{{team.players[1].total}}</td>
+                    </tr>
+                </tbody>
+            </table>
     </body>
 </html>
