[SL] Style updates

--- a/sakura-league/content/pages/league-fantasy.html
+++ b/sakura-league/content/pages/league-fantasy.html
@@ -12,22 +12,27 @@
     
     </head>
     <body data-ng-controller="fantasyController">
-        <div class="player-list-wrapper">
-            <div class="player-list" data-ng-repeat="player in playerList">
-                <img data-ng-class="{'selected-player': player.isSelected, 'unavailable-player ': player.isUnavailable}" 
-                    data-ng-click="onImageClick(player)" class="player-list_image" src="{{player.imageUrl}}" />
-                <p data-ng-class="{'selected-player_text': player.isSelected, 'unavailable-player_text': player.isUnavailable}">
-                    {{player.nickname}}
-                </p>
-            </div>
-        </div>
+        <div class="main-wrapper">
+            <div class="color-wrapper">
+                <div class="player-list-wrapper">
+                    <p>Fantasy players</p>
+                    <div class="player-list" data-ng-repeat="player in playerList">
+                        <img data-ng-class="{'selected-player': player.isSelected, 'unavailable-player ': player.isUnavailable}"
+                            data-ng-click="onImageClick(player)" src="{{player.imageUrl}}" />
+                        <p data-ng-class="{'selected-player_text': player.isSelected, 'unavailable-player_text': player.isUnavailable}">
+                            {{player.nickname}}
+                        </p>
+                    </div>
+                </div>
 
-        <div class="my-team">
-            <p>My Team</p>
-            <div class="player-list" data-ng-repeat="player in playerList" data-ng-if="player.isSelected"> 
-                <div>
-                    <img class="player-list_image" src="{{player.imageUrl}}" />
-                    <p>{{player.nickname}}</p>
+                <div class="my-team">
+                    <p>My team</p>
+                    <div class="team-list" data-ng-repeat="player in playerList" data-ng-if="player.isSelected">
+                        <div>
+                            <img src="{{player.imageUrl}}" />
+                            <p>{{player.nickname}}</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
