--- a/sakura-league/content/pages/league-fantasy.html
+++ b/sakura-league/content/pages/league-fantasy.html
@@ -20,17 +20,18 @@
                         <img data-ng-class="{'selected-player': player.isSelected, 'unavailable-player ': player.isUnavailable}"
                             data-ng-click="onImageClick(player)" src="{{player.imageUrl}}" />
                         <p data-ng-class="{'selected-player_text': player.isSelected, 'unavailable-player_text': player.isUnavailable}">
-                            {{player.nickname}}
+                            {{player.nickname}} - {{player.rating}}
                         </p>
                     </div>
                 </div>
 
                 <div class="my-team">
                     <p>My team</p>
+                    <p>Total: {{totalScore}}</p>
                     <div class="team-list" data-ng-repeat="player in playerList" data-ng-if="player.isSelected">
                         <div>
                             <img src="{{player.imageUrl}}" />
-                            <p>{{player.nickname}}</p>
+                            <p>{{player.nickname}} - {{player.rating}}</p>
                         </div>
                     </div>
                 </div>
